2011-10-29  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR target/50691
	* config/pa/pa.c (emit_move_sequence): Legitimize TLS symbol references.
	* config/pa/pa.h (LEGITIMATE_CONSTANT_P): Return false for
	TLS_MODEL_GLOBAL_DYNAMIC and TLS_MODEL_LOCAL_DYNAMIC symbol references.

2011-04-28  Release Manager

	* GCC 4.5.3 released.

2011-04-21  Richard Guenther  <rguenther@suse.de>

	PR middle-end/48712
	Backport from 4.6 branch
	2011-03-07  Zdenek Dvorak  <ook@ucw.cz>

	PR bootstrap/48000
	* cfgloopmanip.c (fix_bb_placements): Return immediately
	if FROM is BASE_LOOP's header.

2011-04-20  Richard Guenther  <rguenther@suse.de>

	Backport from 4.6 branch
	2011-04-19  Bernd Schmidt  <bernds@codesourcery.com>

	PR fortran/47976
	* reload1.c (inc_for_reload): Return void. All callers changed.
	(emit_input_reload_insns): Don't try to delete previous output
	reloads to a register, or record spill_reg_store for autoincs.

2011-04-19  Richard Guenther  <rguenther@suse.de>

	Backported from 4.6 branch
	2011-03-29  Jakub Jelinek  <jakub@redhat.com>

	PR preprocessor/48248
	* c-ppoutput.c (print): Add src_file field.
	(init_pp_output): Initialize it.
	(maybe_print_line): Don't optimize by adding up to 8 newlines
	if map->to_file and print.src_file are different file.
	(print_line): Update print.src_file.

	2011-04-18  Richard Guenther  <rguenther@suse.de>

	PR preprocessor/48248
	* c-ppoutput.c (maybe_print_line): Avoid changing -P behavior.

2011-04-19  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/46188
	Backported from 4.6 branch
	2010-05-26  Jan Hubicka  <jh@suse.cz>

	* cgraphunit.c (clone_of_p): Remove.
	(verify_cgraph_node): Do not verify clones.
	(cgraph_materialize_all_clones): Do no redirection here.
	* ipa-inline.c (inline_transform): Do redirection here.

2011-04-18  Eric Botcazou  <ebotcazou@adacore.com>

	* dwarf2out.c (is_redundant_typedef): Add 'inline' to prototype.

2011-04-18  Richard Guenther  <rguenther@suse.de>
